--- a/ui/styles/carprofile.css
+++ b/ui/styles/carprofile.css
@@ -1,75 +1,296 @@
-body {
-  font: 15px/1.5 Arial, Helvetica, sans-serif;
-  padding: 0;
-  margin: 0;
-  background-color: #f1f1f1;
-  text-decoration: none;
+* {
+  box-sizing: border-box;
 }
 
-/* Global */
+body {
+  margin: 0;
+}
+
+p {
+  font-size: 0.95em;
+  margin-bottom: 1.8em;
+}
+ul {
+  padding: 0px;
+}
+
+h2,
+h3,
+a {
+  color: #093a58;
+}
+
+h2,
+h3,
+h4 {
+  margin-top: 0;
+}
+
+h4 {
+  margin-bottom: 0.4em;
+}
+
+figure {
+  margin: 0;
+  line-height: 0;
+  position: relative;
+}
+figcaption {
+  font-size: 0.9em;
+  line-height: 1.5;
+  color: #fff;
+  padding: 1em;
+  background: rgba(19, 43, 102, 0.85);
+
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+}
+
+.location-img {
+  width: 35px;
+  position: absolute;
+  top: -15px;
+  right: -15px;
+}
+/* ================================= 
+  Base Layout Styles
+==================================== */
+
+/* ---- Navigation ---- */
+
+.name {
+  font-size: 1.25em;
+  margin: 0;
+}
+.name a,
+.main-nav a {
+  display: block;
+  text-align: center;
+  padding: 10px 15px;
+}
+
+.main-nav a {
+  font-size: 0.96em;
+  color: rgba(19, 43, 102, 0.85);
+  text-transform: uppercase;
+}
+
+.main-nav a:hover {
+  color: #093a58;
+}
+
+/* ---- Layout Containers ---- */
+
+.main-header {
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
+}
+
+.banner,
+.main-footer {
+  text-align: center;
+}
+
+.banner {
+  color: #093a58;
+  background: #ddd;
+  margin-bottom: 40px;
+}
+
+.col {
+  padding-right: 1em;
+  padding-left: 1em;
+}
+
+.main-footer {
+  background: rgba(19, 43, 102, 0.85);
+  color: #fff;
+  padding: 2em 0;
+
+  margin-bottom: 0;
+}
+
+/* ---- Page Elements ---- */
+
+.logo {
+  width: 190px;
+}
+
+.headline {
+  margin-bottom: 0;
+}
+
+/* ================================= 
+  Media Queries
+==================================== */
+
+@media (min-width: 769px) {
+  body {
+    padding-top: 68px;
+  }
+  .name {
+    padding: 12px 0;
+  }
+  .main-header {
+    position: fixed;
+    width: 100%;
+    box-shadow: 0 2px 5px #949494;
+    top: 0px;
+    background: #fff;
+    z-index: 10;
+  }
+
+  .container {
+    width: 90%;
+    margin: 0 auto;
+  }
+
+  .name,
+  .col {
+    float: left;
+  }
+
+  .primary,
+  .secondary {
+    width: 50%;
+  }
+
+  .main-nav {
+    float: right;
+  }
+
+  .main-nav li {
+    display: inline-block;
+    margin-left: 15px;
+  }
+
+  .tagline {
+    font-size: 1.4em;
+  }
+
+  /* ---- Float clearfix ---- */
+
+  .clearfix::after {
+    content: " ";
+    display: table;
+    clear: both;
+  }
+}
+
+@media (min-width: 1025px) {
+  .container {
+    width: 80%;
+    max-width: 1150px;
+  }
+
+  .primary {
+    width: 40%;
+  }
+
+  .secondary,
+  .tertiary {
+    width: 30%;
+  }
+}
+
+/* =================== */
+
+body {
+  padding: 0;
+  padding-top: 50px;
+  background: #ddd;
+  color: #093a58;
+  font-family: "Raleway", sans-serif;
+  font-size: 125%;
+}
 
 .container {
   width: 80%;
-  margin: auto;
-  overflow: hidden;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+.container * {
+  box-sizing: border-box;
 }
 
-ul {
-  margin: 0;
+a {
+  text-decoration: none;
+  color: #093a58;
+}
+
+h5 {
+  font-family: "Segoe UI", sans-serif;
+  font-weight: 200;
+  font-size: 2em;
+  text-transform: uppercase;
+  text-align: center;
+  -webkit-font-smoothing: antialiased;
+  color: #093a58;
+}
+.flex-outer li,
+.flex-inner {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  list-style-type: none;
   padding: 0;
 }
 
-/* header */
-
-header {
-  background: #476b6b;
-  color: #ffffff;
-  padding-top: 30px;
-  min-height: 70px;
-  max-height: 90px;
+.flex-outer {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 0;
+}
+.flex-outer > li:not(:last-child) {
+  padding-bottom: 20px;
+}
+.flex-outer li input:not([type="checkbox"]),
+.flex-outer li textarea {
+  padding: 15px;
+  border: none;
+  font-size: 0.8em;
+}
+.flex-outer li label {
+  padding: 8px;
+}
+.flex-outer li select {
+  border: none;
 }
 
-header a {
-  color: #ffffff;
-  text-decoration: none;
+.flex-outer li p {
+  margin: 0;
+  padding: 8px;
+  flex: 1 0 120px;
+  max-width: 220px;
+}
+.flex-outer li button {
+  margin-left: auto;
+  padding: 8px 16px;
+  border: none;
+  background: #093a58;
+  color: #f2f2f2;
   text-transform: uppercase;
-  font-size: 16px;
+  letter-spacing: 0.09em;
+  border-radius: 2px;
+  cursor: pointer;
+}
+.flex-outer > li > label {
+  flex: 1 0 120px;
+  max-width: 220px;
+}
+.flex-outer > li > label + * {
+  flex: 1 0 220px;
 }
 
-header li {
-  display: inline;
-  padding: 0 20px 0 20px;
+.flex-inner {
+  padding: 0 8px;
+  flex: 1 0 220px;
+  justify-content: space-between;
 }
-
-header #branding {
-  float: left;
-}
-
-header #branding h1 {
-  margin: 0;
-}
-
-header #branding img {
-  display: inline;
-  margin: 0;
-}
-header nav {
-  float: right;
-  margin-top: 10px;
-}
-
-header .highlight {
-  color: #990000;
-  font-weight: bold;
-}
-
-header a {
-  font-weight: bold;
-}
-
-header a:hover {
-  color: #cccccc;
-  font-weight: bold;
+.flex-inner li {
+  width: 100px;
+  font-size: 0.8em;
 }
 
 .prod-card {
@@ -80,6 +301,7 @@ header a:hover {
   left: 50%;
   transform: translate(-50%, -50%);
   background: #ffffff;
+  margin-bottom: 90px;
 }
 
 .img {
@@ -101,6 +323,7 @@ header a:hover {
   display: block;
   float: left;
   padding: 2px 4px;
+  margin-bottom: 10px;
   margin-right: 60px;
   border: 2px solid;
   color: #e74c3c;
@@ -116,70 +339,27 @@ header a:hover {
 @media screen and (max-width: 1430px) {
   .prod-card {
     width: 60%;
-    margin-top: 50px;
-  }
-
-  header li {
-    display: inline;
-    padding: 0 7px 0 7px;
-  }
-  header a {
-    color: #ffffff;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-size: 12px;
+    margin-top: 150px;
   }
 }
 
 @media screen and (max-width: 1150px) {
   .prod-card {
     width: 60%;
-    margin-top: 150px;
+    margin-top: 250px;
   }
+}
 
-  header li {
-    display: inline;
-    padding: 0 7px 0 7px;
-  }
-  header a {
-    color: #ffffff;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-size: 12px;
+@media screen and (max-width: 850px) {
+  .prod-card {
+    width: 60%;
+    margin-top: 350px;
   }
 }
 
 @media screen and (max-width: 650px) {
   .prod-card {
     width: 60%;
-    margin-top: 200px;
-  }
-
-  header li {
-    display: inline;
-    padding: 0 5px 0 5px;
-  }
-  header a {
-    color: #ffffff;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-size: 9px;
+    margin-top: 450px;
   }
 }
-
-/* Profile */
-
-/* .profile-card {
-  width: 35%;
-  min-height: 500px;
-  margin: auto;
-  background: #ffffff;
-  box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 5);
-  margin-top: 30px;
-}
-
-.image-container {
-  position: relative;
-  min-height: 200px;
-  width: 50%;
-} */
