--- a/ui/styles/home.css
+++ b/ui/styles/home.css
@@ -1,92 +1,210 @@
+/* ================================= 
+  Base Element Styles
+==================================== */
+
+* {
+  box-sizing: border-box;
+}
+
 body {
-  font: 15px/1.5 Arial, Helvetica, sans-serif;
-  padding: 0;
-  margin: 0;
-  background-color: #ffffff;
+  font-family: "Varela Round", sans-serif;
+  line-height: 1.6;
+  color: #3a3a3a;
+  margin: 0px;
 }
 
-/* Global */
-
-.container {
-  width: 80%;
-  margin: auto;
-  overflow: hidden;
+p {
+  font-size: 0.95em;
+  margin-bottom: 1.8em;
 }
-
 ul {
-  margin: 0;
-  padding: 0;
+  padding: 0px;
 }
 
-/* header */
-
-header {
-  background: #476b6b;
-  color: #ffffff;
-  padding-top: 30px;
-  min-height: 70px;
+h2,
+h3,
+a {
+  color: #093a58;
 }
 
-header a {
-  color: #ffffff;
+h2,
+h3,
+h4 {
+  margin-top: 0;
+}
+
+h4 {
+  margin-bottom: 0.4em;
+}
+
+a {
   text-decoration: none;
-  text-transform: uppercase;
-  font-size: 16px;
 }
 
-header li {
-  float: left;
-  display: inline;
-  padding: 0 20px 0 20px;
+img {
+  max-width: 100%;
 }
 
-header #branding {
-  float: left;
+figure {
+  margin: 0;
+  line-height: 0;
+  position: relative;
+}
+figcaption {
+  font-size: 0.9em;
+  line-height: 1.5;
+  color: #fff;
+  padding: 1em;
+  background: rgba(19, 43, 102, 0.85);
+
+  position: absolute;
+  width: 100%;
+  bottom: 0;
 }
 
-header #branding h1 {
+.location-img {
+  width: 35px;
+  position: absolute;
+  top: -15px;
+  right: -15px;
+}
+/* ================================= 
+  Base Layout Styles
+==================================== */
+
+/* ---- Navigation ---- */
+
+.name {
+  font-size: 1.25em;
   margin: 0;
 }
-
-header nav {
-  float: right;
-  margin-top: 10px;
-}
-
-header .highlight {
-  color: #990000;
-  font-weight: bold;
-}
-
-header a {
-  font-weight: bold;
-}
-
-header a:hover {
-  color: #cccccc;
-  font-weight: bold;
-}
-
-/* showcase */
-
-#showcase {
-  min-height: 450px;
-  background: #ffffff;
+.name a,
+.main-nav a {
+  display: block;
   text-align: center;
-  color: #000000;
+  padding: 10px 15px;
 }
 
-#showcase h1 {
-  margin-top: 100px;
-  font-size: 55px;
-  margin-bottom: 10px;
+.main-nav a {
+  font-size: 0.96em;
+  color: rgba(19, 43, 102, 0.85);
+  text-transform: uppercase;
 }
 
-#showcase p {
-  font-size: 20px;
+.main-nav a:hover {
+  color: #093a58;
 }
 
-#boxes {
-  background: #476b6b;
-  color: #ffffff;
+/* ---- Layout Containers ---- */
+
+.main-header {
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
+}
+
+.banner,
+.main-footer {
+  text-align: center;
+}
+
+.banner {
+  color: #fff;
+  background: #fdbfc0;
+  padding: 3.2em 0;
+  margin-bottom: 60px;
+}
+
+.col {
+  padding-right: 1em;
+  padding-left: 1em;
+}
+
+.main-footer {
+  background: rgba(19, 43, 102, 0.85);
+  color: #fff;
+  padding: 2em 0;
+  margin-top: 30px;
+}
+
+/* ---- Page Elements ---- */
+
+.logo {
+  width: 190px;
+}
+
+.headline {
+  margin-bottom: 0;
+}
+
+/* ================================= 
+  Media Queries
+==================================== */
+
+@media (min-width: 769px) {
+  body {
+    padding-top: 68px;
+  }
+  .name {
+    padding: 12px 0;
+  }
+  .main-header {
+    position: fixed;
+    width: 100%;
+    box-shadow: 0 2px 5px #949494;
+    top: 0px;
+    background: #fff;
+    z-index: 10;
+  }
+
+  .container {
+    width: 90%;
+    margin: 0 auto;
+  }
+
+  .name,
+  .col {
+    float: left;
+  }
+
+  .primary,
+  .secondary {
+    width: 50%;
+  }
+
+  .main-nav {
+    float: right;
+  }
+
+  .main-nav li {
+    display: inline-block;
+    margin-left: 15px;
+  }
+
+  .tagline {
+    font-size: 1.4em;
+  }
+
+  /* ---- Float clearfix ---- */
+
+  .clearfix::after {
+    content: " ";
+    display: table;
+    clear: both;
+  }
+}
+
+@media (min-width: 1025px) {
+  .container {
+    width: 80%;
+    max-width: 1150px;
+  }
+
+  .primary {
+    width: 40%;
+  }
+
+  .secondary,
+  .tertiary {
+    width: 30%;
+  }
 }
