--- a/ui/styles/register.css
+++ b/ui/styles/register.css
@@ -1,73 +1,91 @@
 body {
-  font-family: Arial, Helvetica, sans-serif;
-}
-* {
-  box-sizing: border-box;
-}
-
-input[type="text"],
-input[type="password"] {
-  width: 100%;
-  padding: 15px;
-  margin: 5px 0 22px 0;
-  display: inline-block;
-  border: none;
-  background: #f1f1f1;
-}
-
-input[type="text"]:focus,
-input[type="password"]:focus {
-  background-color: #ddd;
-  outline: none;
-}
-
-h1 {
-  margin-bottom: 5px;
-}
-
-hr {
-  border: 1px solid #f1f1f1;
-  margin-bottom: 25px;
-}
-
-button {
-  background-color: #4caf50;
-  color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
-  cursor: pointer;
-  width: 100%;
-  opacity: 0.9;
-}
-
-button:hover {
-  opacity: 1;
+  padding: 5px 0;
+  background: #ddd;
+  color: #093a58;
+  font-family: "Raleway", sans-serif;
+  font-size: 125%;
 }
 
 .container {
-  padding: 16px;
-  width: 70%;
-  margin-left: 15%;
-  margin-right: 15%;
+  width: 80%;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+.container * {
+  box-sizing: border-box;
 }
 
-.clearfix::after {
-  content: "";
-  clear: both;
-  display: table;
+a {
+  text-decoration: none;
+  color: #093a58;
 }
 
-@media screen and (max-width: 300px) {
-  .signupbtn {
-    width: 100%;
-  }
+h5 {
+  font-family: "Segoe UI", sans-serif;
+  font-weight: 200;
+  font-size: 2em;
+  text-transform: uppercase;
+  text-align: center;
+  -webkit-font-smoothing: antialiased;
+  color: #093a58;
+}
+.flex-outer li,
+.flex-inner {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  list-style-type: none;
+  padding: 0;
 }
 
-form {
-  width: 40%;
-  margin-left: 25%;
-  margin-right: 25%;
-  margin-top: 5%;
-  margin-bottom: 5%;
+.flex-outer {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 0;
+}
+.flex-outer > li:not(:last-child) {
+  padding-bottom: 20px;
+}
+.flex-outer li input:not([type="checkbox"]),
+.flex-outer li textarea {
+  padding: 15px;
+  border: none;
+  font-size: 0.8em;
+}
+.flex-outer li label {
+  padding: 8px;
+}
+.flex-outer li p {
+  margin: 0;
+  padding: 8px;
+  flex: 1 0 120px;
+  max-width: 220px;
+}
+.flex-outer li button {
+  margin-left: auto;
+  padding: 8px 16px;
+  border: none;
+  background: #093a58;
+  color: #f2f2f2;
+  text-transform: uppercase;
+  letter-spacing: 0.09em;
+  border-radius: 2px;
+  cursor: pointer;
+}
+.flex-outer > li > label {
+  flex: 1 0 120px;
+  max-width: 220px;
+}
+.flex-outer > li > label + * {
+  flex: 1 0 220px;
+}
+
+.flex-inner {
+  padding: 0 8px;
+  flex: 1 0 220px;
+  justify-content: space-between;
+}
+.flex-inner li {
+  width: 100px;
+  font-size: 0.8em;
 }
