--- a/ui/styles/carlist.css
+++ b/ui/styles/carlist.css
@@ -6,7 +6,8 @@ body {
   font-family: "Varela Round", sans-serif;
   line-height: 1.6;
   color: #3a3a3a;
-  margin: 0px;
+  margin: 0;
+  min-height: 100%;
 }
 
 p {
@@ -40,22 +41,12 @@ a {
 img {
   max-width: 100%;
 }
-
-figure {
-  margin: 0;
-  line-height: 0;
-  position: relative;
-}
-figcaption {
-  font-size: 0.9em;
-  line-height: 1.5;
-  color: #fff;
-  padding: 1em;
+.main-footer {
   background: rgba(19, 43, 102, 0.85);
-
-  position: absolute;
-  width: 100%;
-  bottom: 0;
+  color: #fff;
+  padding: 2em 0;
+  margin-top: 20px;
+  margin-bottom: 0;
 }
 
 .location-img {
@@ -65,8 +56,8 @@ figcaption {
   right: -15px;
 }
 /* ================================= 
-    Base Layout Styles
-  ==================================== */
+  Base Layout Styles
+==================================== */
 
 /* ---- Navigation ---- */
 
@@ -104,10 +95,9 @@ figcaption {
 }
 
 .banner {
-  color: #fff;
-  background: #f1f1f1;
-  padding: 3.2em 0;
-  margin-bottom: 60px;
+  color: #093a58;
+  background: #ddd;
+  margin-bottom: 180px;
 }
 
 .col {
@@ -119,107 +109,22 @@ figcaption {
   background: rgba(19, 43, 102, 0.85);
   color: #fff;
   padding: 2em 0;
-  margin-bottom: 30px;
+  margin-top: 700px;
 }
 
-.prod-card {
-  width: 60%;
-  overflow: hidden;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background: #ffffff;
+/* ---- Page Elements ---- */
+
+.logo {
+  width: 190px;
 }
 
-.img {
-  width: 320px;
-  float: left;
-  overflow: hidden;
-}
-
-.img img {
-  width: 100%;
-}
-
-.prod-info {
-  float: left;
-  padding: 0 20px 20px 20px;
-}
-
-.prod-info a {
-  display: block;
-  float: left;
-  padding: 2px 4px;
-  margin-right: 60px;
-  border: 2px solid;
-  color: #e74c3c;
-  font-size: 20px;
-  border-radius: 8px;
-  text-decoration: none;
-}
-
-.price {
-  color: blue;
-}
-
-@media screen and (max-width: 1430px) {
-  .prod-card {
-    width: 60%;
-    margin-top: 50px;
-  }
-
-  header li {
-    display: inline;
-    padding: 0 7px 0 7px;
-  }
-  header a {
-    color: #ffffff;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-size: 12px;
-  }
-}
-
-@media screen and (max-width: 1150px) {
-  .prod-card {
-    width: 60%;
-    margin-top: 150px;
-  }
-
-  header li {
-    display: inline;
-    padding: 0 7px 0 7px;
-  }
-  header a {
-    color: #ffffff;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-size: 12px;
-  }
-}
-
-@media screen and (max-width: 650px) {
-  .prod-card {
-    width: 60%;
-    margin-top: 200px;
-  }
-
-  header li {
-    display: inline;
-    padding: 0 5px 0 5px;
-  }
-  header a {
-    color: #ffffff;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-size: 9px;
-  }
+.headline {
+  margin-bottom: 0;
 }
 
 /* ================================= 
-    Media Queries
-  ==================================== */
+  Media Queries
+==================================== */
 
 @media (min-width: 769px) {
   body {
@@ -274,6 +179,60 @@ figcaption {
   }
 }
 
+.prod-card {
+  width: 60%;
+  overflow: hidden;
+  position: absolute;
+  top: 25%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: #cfbfbf;
+  margin-top: 110px;
+}
+.prod-card2 {
+  width: 60%;
+  overflow: hidden;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: #cfbfbf;
+  margin-top: 240px;
+}
+
+.img {
+  width: 320px;
+  float: left;
+  overflow: hidden;
+}
+
+.img img {
+  width: 100%;
+}
+
+.prod-info {
+  float: left;
+  padding: 0 20px 20px 20px;
+  /* margin: 15px 40px 15px 10px; */
+}
+
+.prod-info a {
+  display: block;
+  float: left;
+  padding: 2px 4px;
+  margin-bottom: 10px;
+  margin-right: 60px;
+  border: 2px solid;
+  color: #5b5c33;
+  font-size: 15px;
+  border-radius: 8px;
+  text-decoration: none;
+}
+
+.price {
+  color: blue;
+}
+
 @media (min-width: 1025px) {
   .container {
     width: 80%;
@@ -287,5 +246,61 @@ figcaption {
   .secondary,
   .tertiary {
     width: 30%;
+  }
+}
+
+@media screen and (max-width: 1430px) {
+  .prod-card {
+    width: 60%;
+    margin-top: 170px;
+  }
+  .prod-card2 {
+    width: 60%;
+    margin-top: 270px;
+  }
+  .main-footer {
+    margin-bottom: -50px;
+  }
+}
+
+@media screen and (max-width: 1150px) {
+  .prod-card {
+    width: 60%;
+    margin-top: 200px;
+  }
+  .prod-card2 {
+    width: 60%;
+    margin-top: 390px;
+  }
+  .main-footer {
+    margin-bottom: -50px;
+  }
+}
+
+@media screen and (max-width: 850px) {
+  .prod-card {
+    width: 60%;
+    margin-top: 230px;
+  }
+  .prod-card2 {
+    width: 60%;
+    margin-top: 450px;
+  }
+  .main-footer {
+    margin-bottom: -50px;
+  }
+}
+@media screen and (max-width: 650px) {
+  .prod-card {
+    width: 60%;
+    margin-top: 380px;
+  }
+  .prod-card2 {
+    width: 60%;
+    margin-top: 675px;
+  }
+  .main-footer {
+    bottom: 0;
+    margin-top: 30px;
   }
 }
