--- a/ui/styles/carlist.css
+++ b/ui/styles/carlist.css
@@ -33,11 +33,42 @@ h4 {
 h4 {
   margin-bottom: 0.4em;
 }
-select {
-  margin-top: 100px;
-  background: none;
-  padding: 5px;
-  border: 1px solid rgba(19, 43, 102, 0.85);
+
+.form-inline {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  width: 100%;
+  text-align: center;
+  margin: 0;
+  min-height: 100px;
+  background-color: rgba(33, 33, 33, 0.3);
+  align-items: center;
+}
+
+.form-inline label {
+  margin: 2px 7px 2px 0;
+}
+
+.form-inline input {
+  vertical-align: middle;
+  margin: 2px 7px 2px 0;
+  padding: 7px;
+  background-color: rgb(182, 179, 179);
+  border: 1px solid #093a58;
+  border-radius: 3px;
+}
+
+@media (max-width: 800px) {
+  .form-inline input {
+    margin: 3px 0;
+  }
+
+  .form-inline {
+    flex-direction: column;
+    align-items: stretch;
+  }
 }
 
 a {
