--- a/ui/styles/carlist.css
+++ b/ui/styles/carlist.css
@@ -48,12 +48,12 @@ h4 {
 }
 
 .form-inline label {
-  margin: 2px 7px 2px 0;
+  margin: 2px 10px 2px 25px;
 }
 
 .form-inline input {
   vertical-align: middle;
-  margin: 2px 7px 2px 0;
+  margin: 2px 7px 2px 10px;
   padding: 7px;
   background-color: rgb(182, 179, 179);
   border: 1px solid #093a58;
