--- a/ui/styles/admindash.css
+++ b/ui/styles/admindash.css
@@ -220,7 +220,7 @@ img {
   width: 60%;
   overflow: hidden;
   position: absolute;
-  top: 25%;
+  top: 38%;
   left: 50%;
   transform: translate(-50%, -50%);
   background: #cfbfbf;
@@ -230,7 +230,7 @@ img {
   width: 60%;
   overflow: hidden;
   position: absolute;
-  top: 50%;
+  top: 59%;
   left: 50%;
   transform: translate(-50%, -50%);
   background: #cfbfbf;
@@ -249,33 +249,37 @@ img {
 
 .prod-info {
   float: left;
-  padding: 0 20px 20px 20px;
-  /* margin: 15px 40px 15px 10px; */
+  text-align: center;
+  padding: 0 20px 0 20px;
 }
 
 .prod-info a {
   display: block;
-  float: left;
-  padding: 2px 4px;
+
+  padding: 2px 2px;
   margin-bottom: 10px;
   margin-right: 60px;
-  border: 2px solid;
+  border: 1px solid;
   color: #5b5c33;
-  font-size: 15px;
+  font-size: 10px;
   border-radius: 8px;
   text-decoration: none;
+  text-align: center;
+  left: 50%;
 }
 .btn-delete {
   display: block;
   float: left;
-  padding: 2px 4px;
+  padding: 2px 2px;
   margin-bottom: 10px;
   margin-right: 60px;
-  border: 2px solid;
+  border: 1px solid;
   color: #b31818;
-  font-size: 15px;
+  font-size: 10px;
   border-radius: 8px;
   text-decoration: none;
+  text-align: center;
+  left: 50%;
 }
 .price {
   color: blue;
@@ -298,60 +302,71 @@ img {
   .tertiary {
     width: 30%;
   }
-}
+  .prod-card {
+    width: 60%;
+    overflow: hidden;
+    position: absolute;
+    top: 32%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: #cfbfbf;
+    margin-top: 110px;
+  }
+  .prod-card2 {
+    width: 60%;
+    overflow: hidden;
+    position: absolute;
+    top: 54%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: #cfbfbf;
+    margin-top: 240px;
+  }
 
-@media screen and (max-width: 1430px) {
-  .prod-card {
-    width: 60%;
-    margin-top: 170px;
+  .img {
+    width: 320px;
+    float: left;
+    overflow: hidden;
   }
-  .prod-card2 {
-    width: 60%;
-    margin-top: 270px;
-  }
-  .main-footer {
-    margin-bottom: -50px;
-  }
-}
 
-@media screen and (max-width: 1150px) {
-  .prod-card {
-    width: 60%;
-    margin-top: 200px;
+  .img img {
+    width: 100%;
   }
-  .prod-card2 {
-    width: 60%;
-    margin-top: 390px;
-  }
-  .main-footer {
-    margin-bottom: -50px;
-  }
-}
 
-@media screen and (max-width: 850px) {
-  .prod-card {
-    width: 60%;
-    margin-top: 230px;
+  .prod-info {
+    float: left;
+    text-align: center;
+    padding: 0 20px 0 20px;
   }
-  .prod-card2 {
-    width: 60%;
-    margin-top: 450px;
+
+  .prod-info a {
+    display: block;
+    float: left;
+    padding: 2px 2px;
+    margin-bottom: 10px;
+    margin-right: 60px;
+    border: 1px solid;
+    color: #5b5c33;
+    font-size: 10px;
+    border-radius: 8px;
+    text-decoration: none;
+    text-align: center;
+    left: 50%;
   }
-  .main-footer {
-    margin-bottom: -50px;
+  .btn-delete {
+    display: block;
+    text-align: center;
+    padding: 2px px;
+    margin-bottom: 10px;
+    margin-right: 60px;
+    border: 1px solid;
+    color: #b31818;
+    font-size: 10px;
+    border-radius: 8px;
+    text-decoration: none;
+    left: 50%;
   }
-}
-@media screen and (max-width: 650px) {
-  .prod-card {
-    width: 60%;
-    margin-top: 380px;
-  }
-  .prod-card2 {
-    width: 60%;
-    margin-top: 675px;
-  }
-  .main-footer {
-    bottom: 0;
-    margin-top: 30px;
+  .price {
+    color: blue;
   }
 }
